feat(chain): add thread-safety to BSTChainManager and fix invite expiration logic
- Replaced HashMap with ConcurrentHashMap for chainMap to ensure safe concurrent access
- Synchronized setName method and used double-checked locking in distributeMessage to avoid race conditions during chain creation
- Updated toString in BSTChainManager to use Java Streams for better readability
- Fixed ChannelServerChain: now correctly checks both activation and expiration of invite codes before throwing NoEffectException